...
            android:layout_height="0dp"
            android:layout_weight="1.5"
            style="@style/AppTheme"
            android:background="@color/transparent"
            />
        <ListView
            android:id="@+id/scrollusers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6.5">

        </ListView>
        <LinearLayout
...
